# charls

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CharLS.sln  CharLS.sln.DotSettings  CharLS.vcproj  CharLS.vcxproj.filters  CharLS_VS14CTP.sln  CharLS_VS2010.sln  CharLS_VS2012.sln  CharLS_VS2012.vcxproj  CharLS_VS2012.vcxproj.filters  CharLS_VS2013.sln  CharLS_VS2013.vcxproj  CharLS_VS2015.sln  CharLS_VS2015.sln.DotSettings  CharLS_VS2017.sln  CharLS_VS2017.sln.DotSettings  Common_VS2015.props  Common_VS2017.props  Directory.Build.props  LICENSE.md  License.txt  MODULE.bazel  README.md  README.txt  REUSE.toml  SECURITY.md  appveyor.yml  azure-pipelines.yml  charls.pc.in  charls.sln  (+31 more)
..svnbridge/: .svnbridge
.github/: CONTRIBUTING.md  dependabot.yml
bazel/: configure_copts.bzl
benchmark/: README.md  benchmark.cpp  benchmark.sln  benchmark.sln.DotSettings  benchmark.vcxproj  benchmark.vcxproj.filters  context_regular_mode.cpp  context_regular_mode_v220.h  decode.cpp  golomb_lut_constexpr.cpp  log2.cpp  vcpkg.json
cli/: CMakeLists.txt  CharLSCli.vcxproj  app.manifest  benchmark.cpp  benchmark.hpp  charls-cli.vcxproj  charls-cli.vcxproj.filters  compare.cpp  compare.hpp  decode.cpp  decode.hpp  encode.cpp  encode.hpp  main.cpp  pch.cpp  pch.hpp  performance.cpp  performance.hpp  portable_anymap_file.hpp  util.cpp  util.hpp  utility.cpp  utility.hpp  vcpkg.json
doc/: requirements.md  style_and_design.md
fuzzing/afl/: AflFuzzTest.vcxproj  CMakeLists.txt  afl-fuzz-test.vcxproj  main.cpp
fuzzing/libfuzzer/: CMakeLists.txt  LibFuzzerTest.vcxproj  LibFuzzerTest.vcxproj.filters  README.md  main.cpp
fuzzing/libfuzzer-decoder/: CMakeLists.txt  LibFuzzerDecoder.vcxproj  README.md  libfuzzer-decoder.vcxproj  main.cpp
fuzzing/libfuzzer-encoder/: CMakeLists.txt  LibFuzzerEncoder.vcxproj  README.md  libfuzzer-encoder.vcxproj  main.cpp
fuzzing/libfuzzer-encoder/fuzzer/: FuzzedDataProvider.h
fuzztest/: CMakeLists.txt  FuzzTest.vcxproj  main.cpp
net/: AssemblyInfo.cs  CharLS.ruleset  CharLSKeyPair.snk  CharLSNet.csproj  CharLSNet_Standard14.csproj  CharLSNet_VS14CTP.csproj  CharLSNet_VS2012.csproj  CharLSNet_VS2013.csproj  CharLSNet_VS2015.csproj  CharLSNet_VS2017.csproj  CodeAnalysisDictionary.xml  GlobalSuppressions.cs  JfifParameters.cs  JlsCustomParameters.cs  JlsParameters.cs  JpegLSBitmapDecoder.cs  JpegLSCodec.cs  JpegLSError.cs  JpegLSInterleaveMode.cs  JpegLSMetadataInfo.cs  JpegLSPresetCodingParameters.cs  SafeNativeMethods.cs  packages.config
net14/: CharLSNet_Standard14.csproj
nettest/: CharLSNetTest.csproj  CharLSNetTest.ruleset  CharLSNetTest_VS14CTP.csproj  (+8 more)
samples/convert.c/: BUILD.bazel  CMakeLists.txt  Convert.vcxproj  Convert.vcxproj.filters  Convert_VS2015.vcxproj  Convert_VS2017.vcxproj  convert-c.vcxproj  main.c
samples/convert.cpp/: BUILD.bazel  CMakeLists.txt  bmp_image.h  convert-cpp.vcxproj  convert-cpp.vcxproj.filters  main.cpp  pch.cpp  pch.h  sample.cpp
src/: BUILD.bazel  CMakeLists.txt  CharLS.vcproj  CharLS.vcxproj  CharLS.vcxproj.filters  CharLS_VS14CTP.vcxproj  CharLS_VS14CTP.vcxproj.filters  CharLS_VS2012.vcxproj  CharLS_VS2012.vcxproj.filters  CharLS_VS2013.vcxproj  CharLS_VS2013.vcxproj.filters  CharLS_VS2015.vcxproj  CharLS_VS2015.vcxproj.filters  CharLS_VS2017.vcxproj  CharLS_VS2017.vcxproj.filters  assert.hpp  byte_span.h  charls-template.pc  charls.def  charls.h  charls.rc  charls.vcxproj  charls.vcxproj.filters  charls.version  charls_jpegls_decoder.cpp  charls_jpegls_encoder.cpp  coding_parameters.h  coding_parameters.hpp  color_transform.h  color_transform.hpp  colortransform.h  conditional_static_cast.h  conditional_static_cast.hpp  config.h  constants.h  constants.hpp  context.h  context_regular_mode.h  context_run_mode.h  contextrunmode.h  (+96 more)
src/design/: JpegStream.cd
test/: CMakeLists.txt  CharLSTest.vcxproj  CharLSTest.vcxproj.filters  CharLSTest_VS14CTP.vcxproj  CharLSTest_VS2013.vcxproj  CharLSTest_VS2013.vcxproj.filters  CharLSTest_VS2015.vcxproj  CharLSTest_VS2015.vcxproj.filters  CharLSTest_VS2017.vcxproj  CharLSTest_VS2017.vcxproj.filters  CodeCoverage.runsettings  bit_stream_damage.cpp  bit_stream_damage.hpp  bitstreamdamage.cpp  bitstreamdamage.h  charls-test.vcxproj  charls-test.vcxproj.filters  charls_jpegls_encoder_test.cpp  color_transform_test.cpp  compliance.cpp  compliance.h  compliance_test.cpp  config.h  dicomsamples.cpp  dicomsamples.h  documentation_test.cpp  encode_test.cpp  gettime.cpp  gettime.h  jpeg_stream_reader_test.cpp  jpegls_algorithm_test.cpp  jpegls_decoder_test.cpp  jpegls_encoder_test.cpp  legacy.cpp  legacy.h  main.cpp  pch.hpp  performance.cpp  performance.h  portable_anymap_file.h  (+20 more)
test/..svnbridge/: .svnbridge
test/conformance/: README.md
test/data/: 2bit_parrot_150x200.pgm  fuzzy-input-bad-run-mode-golomb-code.jls  fuzzy-input-no-valid-bits-at-the-end.jls  land10-10bit-rgb-hp3-invalid.jls  test16_rm_5.jls  test8_ilv_line_rm_7.jls  test8_ilv_sample_rm_7.jls
test/data/conformance/: README.md
tests/: CMakeLists.txt  CharLSTests.vcxproj  CharLSTests.vcxproj.filters  CodeCoverage.runsettings  charls_jpegls_decoder_test.cpp  charls_jpegls_encoder_test.cpp  color_transform_test.cpp  compliance_test.cpp  default_traits_test.cpp  documentation_test.cpp  encode_test.cpp  golomb_table_test.cpp  jpeg_error_test.cpp  jpeg_stream_reader_test.cpp  jpeg_stream_writer_test.cpp  jpeg_test_stream_writer.hpp  jpegls_algorithm_test.cpp  jpegls_decoder_test.cpp  jpegls_encoder_test.cpp  jpegls_preset_coding_parameters_test.cpp  jpegls_preset_coding_parameters_test.hpp  lossless_traits_test.cpp  pch.cpp  pch.hpp  regular_mode_context_test.cpp  run_mode_context_test.cpp  scan_decoder_test.cpp  scan_encoder_test.cpp  scan_encoder_tester.hpp  support.cpp  support.hpp  test_util.hpp  util_test.cpp  validate_spiff_header_test.cpp  vcpkg.json  version_test.cpp
tests/data/: no_start_byte_after_encoded_scan.jls  tulips-gray-8bit-512-512-hp-encoder.jls  tulips-gray-8bit-512-512.pgm
(+272 files in other folders)
